[package]
name = "backward-compatibility"
version = "0.12.0"
publish = false
authors = ["Zama"]
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
# Dependencies for loading and testing backward compatibility data
serde = { version = "=1.0.226", features = ["derive"] }
strum = { version = "=0.27.1", features = ["derive"] }
semver = { version = "=1.0.26", optional = true }
ron = { version = "=0.10.1", features = ["integer128"] }
bincode = "=1.3.3"

[features]
load = ["dep:semver"]
tests = []

[patch.crates-io]
rcgen = { git = 'https://github.com/mkmks/rcgen.git', branch = 'k256' }
