[package]
name = "backward-compatibility"
version = "0.12.4"
publish = false
authors = ["Zama"]
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
# Dependencies for loading and testing backward compatibility data
# Use ranges (starting from 0.11.0 deps) to support
# multiple generator versions while maintaining compatibility
serde = { version = ">=1.0.219, <2", features = ["derive"] }
strum = { version = ">=0.27, <1", features = ["derive"] }
semver = { version = ">=1.0, <2", optional = true }
ron = { version = ">=0.10, <0.11", features = ["integer128"] }
bincode = "=1.3.3"  # Keeping exact - binary format must be stable

[features]
load = ["dep:semver"]
tests = []

[patch.crates-io]
rcgen = { git = 'https://github.com/mkmks/rcgen.git', branch = 'k256' }
