[package]
name = "bc2wrap"
version = "2.0.1"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# ⚠️ IMPORTANT: Add new dependencies to workspace root Cargo.toml, NOT here!
# Use .workspace = true to reference workspace dependencies
# Maintain alphabetical order
bincode.workspace = true
serde.workspace = true
