[package]
name = "kms-common"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tfhe-versionable.workspace = true
backward-compatibility = { workspace = true, features = [
    "load",
    "tests",
], optional = true }

[features]
testing = ["dep:backward-compatibility"]
