[package]
name = "kms-common"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
backward-compatibility = { workspace = true, features = [
    "load",
    "tests",
], optional = true }
tfhe-versionable.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
] }
tracing = { workspace = true, features = ["log"] }

[features]
testing = ["dep:backward-compatibility"]
