[package]
name = "kms-common"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
backward-compatibility = { workspace = true, features = [
    "load",
    "tests",
], optional = true }
clap = { workspace = true, features = ["derive", "env"] }
derive_more = { version = "=1.0.0", features = ["display"] }
tfhe-versionable.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }

[dev-dependencies]
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
] }
tracing = { workspace = true, features = ["log"] }

[features]
testing = ["dep:backward-compatibility"]
