[package]
name = "conf-trace"
version.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7", features = ["tokio"] }
anyhow.workspace = true
config = "=0.15.0"
http.workspace = true
lazy_static.workspace = true
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry-http = "=0.27.0"
opentelemetry-otlp = { version = "=0.27.0", features = ["tokio"] }
opentelemetry-prometheus = "0.27.0"
opentelemetry-semantic-conventions = "=0.27.0"
opentelemetry-stdout = { version = "=0.27.0", features = ["trace"] }
opentelemetry_sdk = { version = "=0.27.1", features = ["rt-tokio", "logs", "metrics"] }
prometheus = { version = "0.13", features = ["process"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net"] }
serde = { workspace = true, features = ["derive", "rc"] }
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tonic.workspace = true
tracing = { workspace = true, features = ["log", "async-await"] }
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
tracing-test = "0.2"
typed-builder.workspace = true
uuid = { version = "=1.11.0", features = ["v4", "fast-rng"] }

[features]
default = []
