[package]
name = "kms-core-client"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
# Inherited from repository root Cargo.toml

[lib]
name = "kms_core_client"
path = "src/lib.rs"

[[bin]]
name = "kms-core-client"
path = "src/bin.rs"

[dependencies]
# ⚠️ IMPORTANT: Add new dependencies to workspace root Cargo.toml, NOT here!
# Use .workspace = true to reference workspace dependencies
# Maintain alphabetical order
aes-prng.workspace = true
alloy-primitives = { workspace = true, features = ["k256"] }
alloy-signer.workspace = true
alloy-sol-types = { workspace = true, features = ["eip712-serde"] }
anyhow.workspace = true
attestation-doc-validation.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive"] }
hex.workspace = true
kms = { workspace = true, default-features = false, features = [
    "non-wasm",
    "testing",
    "insecure",
] }
kms-grpc.workspace = true
observability.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
strum.workspace = true
strum_macros.workspace = true
tempfile.workspace = true
tfhe.workspace = true
threshold-fhe = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "std"] }
validator.workspace = true

[dev-dependencies]
# ⚠️ IMPORTANT: Add new dependencies to workspace root Cargo.toml, NOT here!
# Use .workspace = true to reference workspace dependencies
# Maintain alphabetical order
assert_cmd.workspace = true
cc-tests-utils = { path = "./tests-utils" }
serial_test.workspace = true
test-context.workspace = true

[build-dependencies]
tonic-build.workspace = true

[package.metadata.cargo-machete]
ignored = ["kms", "strum"]