[package]
name = "kms-core-client"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
# Inherited from repository root Cargo.toml

[lib]
name = "kms_core_client"
path = "src/lib.rs"

[[bin]]
name = "kms-core-client"
path = "src/bin.rs"

[[test]]
name = "integration_test"
path = "tests/integration/integration_test.rs"
required-features = ["testing"]

[[test]]
name = "integration_test_isolated"
path = "tests/integration/integration_test_isolated.rs"
required-features = ["testing"]

[[test]]
name = "kubernetes_test_centralized"
path = "tests/kind-testing/kubernetes_test_centralized.rs"
required-features = ["kind_tests"]

[[test]]
name = "kubernetes_test_centralized_isolated"
path = "tests/kind-testing/kubernetes_test_centralized_isolated.rs"
required-features = ["kind_tests"]

[[test]]
name = "kubernetes_test_threshold"
path = "tests/kind-testing/kubernetes_test_threshold.rs"
required-features = ["kind_tests"]

[[test]]
name = "kubernetes_test_threshold_isolated"
path = "tests/kind-testing/kubernetes_test_threshold_isolated.rs"
required-features = ["kind_tests"]

[dependencies]
# ⚠️ IMPORTANT: Add new dependencies to workspace root Cargo.toml, NOT here!
# Use .workspace = true to reference workspace dependencies
# Maintain alphabetical order
aes-prng.workspace = true
alloy-primitives = { workspace = true, features = ["k256"] }
alloy-signer.workspace = true
alloy-sol-types = { workspace = true, features = ["eip712-serde"] }
anyhow.workspace = true
attestation-doc-validation.workspace = true
bc2wrap.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive"] }
hex.workspace = true
kms = { workspace = true, default-features = false, features = [
    "non-wasm",
    "testing",
    "insecure",
] }
kms-grpc.workspace = true
observability.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
strum.workspace = true
strum_macros.workspace = true
tempfile.workspace = true
tfhe.workspace = true
threshold-fhe = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "std"] }
validator.workspace = true

[dev-dependencies]
# ⚠️ IMPORTANT: Add new dependencies to workspace root Cargo.toml, NOT here!
# Use .workspace = true to reference workspace dependencies
# Maintain alphabetical order
assert_cmd.workspace = true
cc-tests-utils = { path = "./tests-utils" }
futures.workspace = true
# Self-import for integration tests
kms-core-client = { workspace = true, features = ["testing"] }
serial_test.workspace = true
test-context.workspace = true

[build-dependencies]
tonic-build.workspace = true

[package.metadata.cargo-machete]
ignored = ["kms", "strum"]

[features]
# Enables threshold PRSS tests in `integration_test_isolated`.
# These are the threshold tests that require PRSS infrastructure:
#   preproc+keygen, MPC context init/switch, reshare, full-gen preproc.
# Un-ignores tests guarded with `#[cfg_attr(not(feature = "threshold_tests"), ignore)]`.
# Compiles setup helpers that run threshold servers with `ensure_default_prss=true`.
#
# This flag only gates code/tests; it does NOT generate key material by itself.
# Material requirements:
# - Test params: missing PRSS can be initialized live at server startup.
# - Default params: pre-generated PRSS is required in `test-material/default`
#   (run `make generate-test-material-default`); missing PRSS is a hard error.
# - Some tests generate PRSS during the test itself (via NewEpoch/new_prss_isolated)
#   and therefore do not require pre-generated startup PRSS.
# Does NOT enable Kind/Kubernetes tests (use `kind_tests` for those).
threshold_tests = ["testing"]
# Enable tests that require a running Kind/Kubernetes cluster.
kind_tests = ["testing"]
testing = []
