[package]
name = "kms-core-client"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
# Inherited from repository root Cargo.toml

[lib]
name = "kms_core_client"
path = "src/lib.rs"

[[bin]]
name = "kms-core-client"
path = "src/bin.rs"

[[test]]
name = "integration_test"
path = "tests/integration/integration_test.rs"
required-features = ["testing"]

[[test]]
name = "kubernetes_test_centralized"
path = "tests/kind-testing/kubernetes_test_centralized.rs"
required-features = ["kind_tests"]

[[test]]
name = "kubernetes_test_threshold"
path = "tests/kind-testing/kubernetes_test_threshold.rs"
required-features = ["kind_tests"]

[dependencies]
# ⚠️ IMPORTANT: Add new dependencies to workspace root Cargo.toml, NOT here!
# Use .workspace = true to reference workspace dependencies
# Maintain alphabetical order
aes-prng.workspace = true
alloy-primitives = { workspace = true, features = ["k256"] }
alloy-signer.workspace = true
alloy-sol-types = { workspace = true, features = ["eip712-serde"] }
anyhow.workspace = true
attestation-doc-validation.workspace = true
bc2wrap.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive"] }
threshold-execution = { workspace = true, features = ["non-wasm"] }
hashing.workspace = true
hex.workspace = true
k256.workspace = true
kms = { workspace = true, features = [
    "default",
    "testing",
    "insecure",
] }
kms-grpc.workspace = true
observability.workspace = true
prost.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
reqwest = { workspace = true, features = ["json", "rustls"] }
rcgen.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tempfile.workspace = true
tfhe.workspace = true
threshold-networking.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-rustls.workspace = true
tonic = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "std"] }
validator.workspace = true

[dev-dependencies]
# ⚠️ IMPORTANT: Add new dependencies to workspace root Cargo.toml, NOT here!
# Use .workspace = true to reference workspace dependencies
# Maintain alphabetical order
assert_cmd.workspace = true
test-utils.workspace = true
test-utils-cc = { path = "./test-utils-cc" }
futures.workspace = true
# Self-import for integration tests
kms-core-client = { workspace = true, features = ["testing"] }
test-context.workspace = true
toml.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[package.metadata.cargo-machete]
ignored = ["kms", "strum"]

[features]
# Compiles + runs the handful of threshold integration tests that are too slow
# to run locally by default (full preproc+keygen, 6-party MPC context switch,
# nightly preproc-keygen). Follows the workspace-wide `slow_tests` convention
# (see core/service, core/threshold-execution). CI opts in via `-F slow_tests`.
#
# This flag only gates code/tests; it does NOT generate key material by itself.
# Some gated tests use Default params, which require pre-generated material in
# `test-material/default` (run
# `cargo run -p generate-test-material -- --output ./test-material --profile secure --parties 4,13`);
# missing Default material is a hard error.
# Does NOT enable Kind/Kubernetes tests (use `kind_tests` for those).
slow_tests = ["testing"]
# Enable tests that require a running Kind/Kubernetes cluster.
kind_tests = ["testing"]
testing = ["threshold-execution/testing"]
